--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="/logo192.png" />
   <link rel="manifest" href="/manifest.json" />
-  <title>React App</title>
+  <title>Style Guide</title>
   <script defer="defer" src="/static/js/main.a961ebde.js"></script>
   <link href="/static/css/main.2546dcea.css" rel="stylesheet">
 </head>
